ui/ozone/public/cursor_factory_ozone.cc
@@ -4,37 +4,30 @@
 
 #include "ui/ozone/public/cursor_factory_ozone.h"
 
-#include "base/lazy_instance.h"
 #include "base/logging.h"
-#include "base/threading/thread_local.h"
 
 namespace ui {
 
 namespace {
 
-// TODO(mfomitchev): crbug.com/741106
-// Until the above bug is fixed, CursorFactoryOzone singleton needs to be
-// thread-local, because Ash creates its own instance.
-base::LazyInstance<base::ThreadLocalPointer<CursorFactoryOzone>>::Leaky
-    lazy_tls_ptr = LAZY_INSTANCE_INITIALIZER;
+CursorFactoryOzone* g_instance = nullptr;
 
 }  // namespace
 
 CursorFactoryOzone::CursorFactoryOzone() {
-  DCHECK(!lazy_tls_ptr.Pointer()->Get())
+  DCHECK(!g_instance)
       << "There should only be a single CursorFactoryOzone per thread.";
-  lazy_tls_ptr.Pointer()->Set(this);
+  g_instance = this;
 }
 
 CursorFactoryOzone::~CursorFactoryOzone() {
-  DCHECK_EQ(lazy_tls_ptr.Pointer()->Get(), this);
-  lazy_tls_ptr.Pointer()->Set(nullptr);
+  DCHECK_EQ(g_instance, this);
+  g_instance = nullptr;
 }
 
 CursorFactoryOzone* CursorFactoryOzone::GetInstance() {
-  CursorFactoryOzone* result = lazy_tls_ptr.Pointer()->Get();
-  DCHECK(result) << "No CursorFactoryOzone implementation set.";
-  return result;
+  DCHECK(g_instance);
+  return g_instance;
 }
 
 PlatformCursor CursorFactoryOzone::GetDefaultCursor(CursorType type) {
