ui/views/mus/mus_client.h
@@ -33,10 +33,6 @@ namespace service_manager {
 class Connector;
 }
 
-namespace ui {
-class CursorDataFactoryOzone;
-}
-
 namespace wm {
 class WMState;
 }
@@ -78,9 +74,6 @@ class VIEWS_MUS_EXPORT MusClient : public aura::WindowTreeClientDelegate,
     // Create a wm::WMState. Some processes (e.g. the browser) may already
     // have one.
     bool create_wm_state = true;
-
-    // Tests may need to control objects owned by MusClient.
-    bool create_cursor_factory = true;
 
     // If provided, MusClient will not create the WindowTreeClient. Not owned.
     // Must outlive MusClient.
@@ -178,10 +171,6 @@ class VIEWS_MUS_EXPORT MusClient : public aura::WindowTreeClientDelegate,
   service_manager::Identity identity_;
 
   base::ObserverList<MusClientObserver>::Unchecked observer_list_;
-
-#if defined(USE_OZONE)
-  std::unique_ptr<ui::CursorDataFactoryOzone> cursor_factory_ozone_;
-#endif
 
   // NOTE: this may be null (creation is based on argument supplied to
   // constructor).
